--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -49,7 +49,7 @@
                         play-btn="{{item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0 }}">
                         <img ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340"
                             crop-height="190" crop-type="crop"
-                            data-final-src="{{item.data.topImage | resizeImage : 340:190}}">
+                            data-final-src="{{item.data.topImage}}">
                         <img ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png"
                             style="width:100%;">
                     </div>
