feat(CP): register analytics
register imported and default analytics

--- a/control/content/assets/css/control.content.css
+++ b/control/content/assets/css/control.content.css
@@ -574,12 +574,9 @@ Style for loader
     justify-content: space-between;
 }
 
-#audioImage .screen {
-    width: auto;
-    max-width: unset;
-}
-
-#audioImage .screen .default-background-hover {
+.thumbnail-image-selector .screen,
+.audio-image-selector .screen {
+    width: fit-content;
     max-width: unset;
 }
 
