--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -51,7 +51,7 @@
         </span>
     </label>
     <div class="button-switch col-md-9 flex flex-justify-end">
-        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.content.skipMediaPage" ng-class="{'disabled': Settings.data.content.autoPlay}">
+        <input id="skipInfoSwitch" type="checkbox" ng-model="Settings.data.design.skipMediaPage" ng-class="{'disabled': Settings.data.content.autoPlay}">
         <label for="skipInfoSwitch" class="label-success" ng-class="{'disabled': Settings.data.content.autoPlay}"></label>
     </div>
 </div>
