--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -18,7 +18,7 @@
 <div class="holder padding-zero list-layout-1" ng-class="{'pb40': globalPlaylist}">
     <div class="media-center-plugin first-layout text-overlay">
         <div class="plugin-banner clearfix">
-            <div  id="carousel" build-fire-carousel=""></div>
+            <div id="carousel" build-fire-carousel="" ng-init="WidgetHome.loadCarousel()"></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix text-overlay wysiwyg" >
             <p ng-if="WidgetHome.showDescription()" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
