feat(widget): handle auto play audio
handle auto play audios and jump to the last position

--- a/control/settings/templates/home.html
+++ b/control/settings/templates/home.html
@@ -133,7 +133,7 @@
     </label>
     <div class='col-md-9 pull-left'>
         <button id="actionItemAddBtn" ng-class="{'disabled': !Settings.data.content.globalPlaylist}"
-            class="btn btn-primary btn-outlined btn-primary-add pull-right" ng-click="Settings.showPluginsDialog()">Add Action Item</button>
+            class="btn btn-primary btn-outlined btn-primary-add pull-right" ng-click="Settings.showPluginsDialog()">Add Feature</button>
         <div id="actionItemAddRow" ng-class="{'disabled': !Settings.data.content.globalPlaylist}" 
             class="hidden flex-auto flex border-grey border-radius-four padding-bottom-five padding-top-five padding-left-ten padding-right-ten">
             <div class="flex flex-auto flex-align-center">
