--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -1062,6 +1062,14 @@ img.done-icon {
 	padding-bottom: 75px !important;
 }
 
+.playlist-empty-container {
+    height: calc(100vh - 5rem);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 #emptyContainer,
 #filterEmptyContainer {
 	display: none;
@@ -1599,5 +1607,5 @@ input[type="checkbox"]:checked+.subcategory-label.minus::before {
 
 .disabled {
 	pointer-events: none;
-	opacity: 0.5;
+	opacity: 0.35 !important;
 }
