--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -46,11 +46,11 @@
             </div>
         </div>
         <div class="media-player-btns">
-            <span class="icon" ng-class="(NowPlaying.currentTrack.isAudioFromPluginList && !autoPlay) && 'disabled'" ng-click="NowPlaying.shufflePlaylist()">
+            <span class="icon" ng-class="(((NowPlaying.currentTrack.isAudioFromPluginList && !autoPlay) || (!NowPlaying.currentTrack.isAudioFromPluginList && globalPlaylist)) || !NowPlaying.isAudioInitialized) && 'disabled'" ng-click="NowPlaying.shufflePlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2874)">
                         <path d="M10.59 9.17L5.41 4L4 5.41L9.17 10.58L10.59 9.17ZM14.5 4L16.54 6.04L4 18.59L5.41 20L17.96 7.46L20 9.5V4H14.5ZM14.83 13.41L13.42 14.82L16.55 17.95L14.5 20H20V14.5L17.96 16.54L14.83 13.41Z" 
-                        ng-class="((NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePluginList) || (!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePlaylist)) ? 'active' : 'not-active'"/>
+                        ng-class="((NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePluginList) || (!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePlaylist && !globalPlaylist)) ? 'active' : 'not-active'"/>
                     </g>
                     <defs>
                         <clipPath id="clip0_1431_2874">
@@ -58,7 +58,7 @@
                         </clipPath>
                     </defs>
                 </svg>
-                <span class="shuffle-indicator" ng-if="(((NowPlaying.currentTrack.isAudioFromPluginList) && NowPlaying.settings.shufflePluginList) || (!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePlaylist))">
+                <span class="shuffle-indicator" ng-if="((NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePluginList) || (!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings.shufflePlaylist && !globalPlaylist))">
                     <span class="shuffle-indicator-text" ng-if="NowPlaying.currentTrack.isAudioFromPluginList">{{NowPlaying.shuffleAllItemsIndicator}}</span>
                     <span class="shuffle-indicator-text" ng-if="!NowPlaying.currentTrack.isAudioFromPluginList">{{NowPlaying.shufflePlaylistItemsIndicator}}</span>
                 </span>
@@ -70,7 +70,7 @@
                 <span ng-if="autoPlay" class="btn btn-icon" ng-click="NowPlaying.prev()"><i style="font-size: 18px; color: #D7D7D8;" class="glyphicon glyphicon-step-backward" role="button"></i></span>
                 <button class="btn btn-icon btn-lg btn-primary">
                     <span ng-if="!NowPlaying.playing" class="icon icon-main whiteTheme play-pause-icon"
-                        ng-click="NowPlaying.playTrack()">
+                        ng-click="NowPlaying.playTrack()" ng-class="NowPlaying.isAudioInitialized && 'disabled">
                         <img src="assets/css/icons/ic_play2.svg" alt="">
                     </span>
                     <span ng-if="NowPlaying.playing" class="icon icon-main whiteTheme play-pause-icon"
@@ -82,11 +82,11 @@
                         src="assets/css/icons/ic_fast_forward.svg" alt=""></span>
                 <span ng-if="autoPlay" class="btn btn-icon" ng-click="NowPlaying.next()"><i style="font-size: 18px; color: #D7D7D8;" class="glyphicon glyphicon-step-forward" role="button"></i></span>
             </div>
-            <span ng-class="NowPlaying.currentTrack.isAudioFromPluginList && 'disabled'" class="icon icon-sm" ng-click="NowPlaying.loopPlaylist()">
+            <span ng-class="((NowPlaying.currentTrack.isAudioFromPluginList || (!NowPlaying.currentTrack.isAudioFromPluginList && globalPlaylist)) || !NowPlaying.isAudioInitialized) && 'disabled'" class="icon icon-sm" ng-click="NowPlaying.loopPlaylist()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                     <g opacity="0.9" clip-path="url(#clip0_1431_2881)">
                         <path d="M7 7H17V10L21 6L17 2V5H5V11H7V7ZM17 17H7V14L3 18L7 22V19H19V13H17V17Z" 
-                        ng-class="(!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings && NowPlaying.settings.loopPlaylist) ? 'active' : 'not-active'">
+                        ng-class="(!NowPlaying.currentTrack.isAudioFromPluginList && NowPlaying.settings && NowPlaying.settings.loopPlaylist && !globalPlaylist) ? 'active' : 'not-active'">
                     </g>
                     <defs>
                         <clipPath id="clip0_1431_2881">
@@ -105,7 +105,7 @@
             <span ng-if="!globalPlaylist" class="glyphicon glyphicon-option-horizontal whiteTheme"
                 ng-click="NowPlaying.openMoreInfoOverlay()"></span>
                 <i ng-if="globalPlaylist" class="btn btn-icon glyphicon whiteTheme" style="font-size: 17px; opacity: .5;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(NowPlaying.item.id), 'glyphicon-minus' : isInGlobalPlaylist(NowPlaying.item.id) }" ng-click="toggleGlobalPlaylistItem(NowPlaying.item)" role="button"></i>
-            <span ng-class="(NowPlaying.forceAutoPlay || globalPlaylist) && NowPlaying.autoJumpToLastPosition && 'disabled'" class="glyphicon glyphicon-cog whiteTheme" ng-click="NowPlaying.getSettings()"></span>
+            <span ng-class="(NowPlaying.forceAutoPlay || globalPlaylist) && NowPlaying.autoJumpToLastPosition && 'hidden'" class="glyphicon glyphicon-cog whiteTheme" ng-click="NowPlaying.getSettings()"></span>
         </div>
     </div>
 
