--- a/widget/templates/filters.html
+++ b/widget/templates/filters.html
@@ -34,7 +34,7 @@
                                         class="subcategory-label" for="{{category.id}}"></label>
                                 </div>
                             </div>
-                            <span ng-class="!category.data.subcategories || !category.data.subcategories.length ? 'disabled-category-arrow' : ''" ng-click="WidgetFilters.expand($index)"
+                            <span ng-class="!category.data.subcategories || !category.data.subcategories.length ? 'hidden-category-arrow' : ''" ng-click="WidgetFilters.expand($index)"
                                 class="expand-collapse chevron top chev drop-control"></span>
 
                         </div>
