--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -22,12 +22,14 @@
                             <div class="screen logoicon pull-left">
                                 <div class="border-grey border-radius-three default-background-hover"
                                     style="width: 40px; height: 40px; display: flex; align-items: center; justify-content: center;">
-                                    <img load-image="1x1" aspect="1:1" crop-type="crop" size="xs"
-                                        ng-if="category.data.icon && !ContentMedia.isIcon(category.data.icon)"
-                                        data-final-src="{{category.data.icon }}">
+                                    <img ng-if="category.data.icon && !ContentMedia.isIcon(category.data.icon)"
+                                        ng-src="{{category.data.icon | resizeImage : 40:40 }}">
                                     <div style="color:#5f5f5f"
                                         ng-if="category.data.icon && ContentMedia.isIcon(category.data.icon)"
                                         ng-class="category.data.icon">
+                                    </div>
+                                    <div ng-if="!category.data.icon" class="add-icon">
+                                        <img src="../../../../styles/media/holder-1x1.png" >
                                     </div>
                                 </div>
 
